@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX nettle-1.14-make-as-needed.patch 471 SHA256 f8552cde7b7c91923c276afca147e9c37b851b60896e1c9d5eb729ecd5bbc324 SHA512 fa5b722875b45617df2099ab3542f09dda8331b6dac9aa1f290a0b4f33b796b87e2026e7900109af103ac23aa3910dcdd6c45df4801ac809a1696843493a9760 WHIRLPOOL bf21b6ba4b7e5e09212f70c4ab0dfcfc65e4ee73365a1f7e3a37205d536082fcc4402b267aec7b1e3776c8df291bb605004cdd227b6ec3f7bd80905a5d21712d
 AUX nettle-2.0-binutils-2.22.patch 615 SHA256 13bba9e32f8c78ae84c4eeafa459eb67830e5504e43dc7497f5091086271775b SHA512 951d3073ee8f2e42ebe345481bebfcd58f2fe80ddb80a1b49e0c3f27ed62c5bc45cf8a8b81b84733d54e2d4ae2db6f0edc6a4d89e3904b598b50de8d193f9e01 WHIRLPOOL 4633905b1a7c6f5c70cdfacebffd98411f9829c4b2da79aabaad63150c146a497214302f5897a9dffefadd6def60ef2028ac82f530eb681da740df0efa332d04
@@ -21,24 +21,15 @@ EBUILD nettle-2.4.ebuild 1097 SHA256 b7f725a7d24f5441126f63c77996c35fb2b6ab6363a
 EBUILD nettle-2.5-r1.ebuild 1168 SHA256 72ce9ac362d0492a3971a509d09bd40b27e1309ccac300d2220a90b23ad2a875 SHA512 7a6b1689535446def39f367588ca89e70b8599cceacbd2e0908436245887d3753816cbf20594dc48d085c71b432bc956437df9a9ae92f9eb5d079055ba92b23a WHIRLPOOL 20189b6c71f492009d4c08f10779951d8d4cae60ae75b2c0e53680851466ccb7f0b905c9b4c51067ce1b3727e12f9c533f13ae4d4d9bf80bf06fdcc71fb2074c
 EBUILD nettle-2.5.ebuild 1039 SHA256 af811b23075e5f1f6f327ca6a15f0bef3ea45bceee4b642d5b37bef0711b39b5 SHA512 a3b555f337257164893f0e160502f34b3c5b134742d095d341ada4839cd73160c35b721efc6fb83aa31410dc818295c3cc31abe557cc9a2a2be33059ce49dd43 WHIRLPOOL 8b867409ba38014beda5937e6fda825c91f9e29d441c1c3774658fa95f5729301f7826a830c1418633a07a46a3b1afb4673889bedc1f0ed121acfa4a4eda7b94
 EBUILD nettle-2.6.ebuild 1352 SHA256 9701af684b1ad9be6444070c285c07c65cd557fb53ac2ea98d60512e9580e3c4 SHA512 cc16972450484f7352de6eab5d03651aa51e18406a66c378b476d3a7ef5af92c6e0a2dfb55336439b6f55afd6c14a51a604e3829ef2b8aeb3782f5142aab0c74 WHIRLPOOL d1fd342a650a29d58295c7b9201f41a1ca404c8fd4adff002d989410dfcb03a2743faf1b7c02e1c11ce4bc32a34d3475a1170f41f2c8624f81fe7f4af34d4eb9
+EBUILD nettle-2.7.1-r1.ebuild 1634 SHA256 26dc990c0e2f4329a88ef78a5e34772ffd0547796522bae82d139819c79791d1 SHA512 138402277bcc21f17a5d4cac7e8cc77349ee3e511c21d3910197712354fbb24ca6ef5a6c15ce8284eee04a7aa4072e4077b5979df7ad7ba8779d0a6d374957c1 WHIRLPOOL a22c746af41f2f65ba055791bc6b7df900e283bc00cea6f68247d2c216932f2696e940b9284b5eb2d7fda77ea9d2d2bfc211ed5ea26a109fafb67acd253dbcc7
 EBUILD nettle-2.7.1.ebuild 1448 SHA256 4be33a316226b6867e9ebd1abc006144a2d5a0669115e951c4fc09f92ec3cd7f SHA512 ca6ee79dfe0ecae635ed02e285cb895ea1dd7cc227b2f46ddccacdfb04b7a92551b0d8ac5b45797ca2c7acdf44d453562796015880c78f4c150c5f93462aee5c WHIRLPOOL 30af29d76793ef8a36e3e9a562e7bf477cb838380f8466d9dbf8837ff7498796d1c56e29e6ed6211e0a3a28943b7a0bdfee9eef9c581111633cd409a8e62cd80
 EBUILD nettle-2.7.ebuild 1454 SHA256 14002add119affff30e093003769dfb147c7e2fda477a7a9b569b7c0b19cc66e SHA512 4035a9492c4e91d6cb378cbb8fe85f2f424275a39a4730dd7104807e197d4b6cfec035735350bdd82e34556fcb7972a3c55a42f5003138d0837ba5ca82002911 WHIRLPOOL 59ad11f1a69741a5762ff5496f121ea0a4da7b07d633c4a2c8f13dcae92b93e5cef728ce9f24d60fa3a1a81993ff17a3c9b52e2e374e31baa8156b3f8a4c2309
-MISC ChangeLog 12786 SHA256 efb2695c62ddb8f78e9af5fe6666b746b8fd66811f0605b28bb0a030935f8ce2 SHA512 63b29358077bc67f56d50473366e9bb5d3fdbe0b01e5310e17c66c3bfd6fd59ce3dee5cf169412f1f2b2802dda4cf884af70a8b480d1a363e06732aed4c2d588 WHIRLPOOL 773e95fb8ff08149a08b93a8da3e84029f3aef0fc30b7aed5eaaf9210eb99fb692beda9a6d2a4902dee46911ff9d09258523816b413a2595cca155ff6cda077c
+MISC ChangeLog 12994 SHA256 96b2f41ba548c73b29a8b24d9dc252915c4a75535eba0b90bf834330d14d48cc SHA512 8ba6cc680832f3250b6f5861ef2e0b6a67c4e266ef1eda5bfd84c4998deed80f5843fc86bb69fe858a0450191e7f2347cb8505f340cd663b28c77368c9459207 WHIRLPOOL 8ba2508d5099792e3c134f29cedb228cc2473fe41b9063394ee367911b898d44ad6b37926847460b89f4e9d77dfecdb8aeac425aeda31e5c9c0826190a73bb2f
 MISC metadata.xml 159 SHA256 fabd15e2740a2a68e0bda738d0cd4300b133ff11239802afe7e60aa3862c9c03 SHA512 96a1f7f082adc57e52a1a32666e1206e68f8ff03c728fdb7666ff98c255905977491fc4dfc37bc8bdf5da0eb50cdc408adec357bbd75bd980bc90659cc157194 WHIRLPOOL 82fca1c4b75b090abdb0a4233c8e49fc43535ca6e470f725c1872653ea922b6693e9646bc3ee1fd6f1293ebedad661642cec13b2817fb5315268300f7675a751
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSAPQ5AAoJELp701BxlEWf7H0QALdpzCZEsZTXD29w2szFxDvT
-8xJ+yoKJz+CmgFX6btH8X69wan9e8P9s0DU818Op4p5rBz7LRWxyiUJOp+FunOE+
-EytHLF9HDbkq6MR3h07nxH9kXXGJpvueD5QQ6yoRuep/vBSg26S6Jaw4FYv4KOpn
-ekJltuvtAoWSO4G4Ve8cKuuYzO8XDqL9Qgua3FXNI7Ys/inhaiGIBUKG/YY5PJsq
-7/f1joziPkD2FSc9FOKR6HhlMo5MGPWiS7rkqk3GjK2NvhTBSzH1wZbF905yVDCX
-5JdSrP5n1EoumCMwwnPH6/LqHeP50/fiy9qiHG60sZEzAe5QI1F6C0eU2c15WXwH
-TdRcx8ir6vHDb/LhbUa/lp4tpzcfW1pk+lwC2CyD0r6W97w11w8uqbn2t6L9xQfY
-SXE5O0ktc6VXcf1gs+ca4CNLs7wu5AQg8d5gja9rFhWrp6fmhCgsrnRmVjYAvGZs
-pOIwZJm1QodomtubKDAVmF+ejA8tYgrXAw53s1b5upyDHnNbLRHanCAZpTbxSyOJ
-CD5FD/oky2B44vYtgF1thFxM0ZIA2L7IJb1FGvEKJXODXubYkom9DFPfY1weuUoh
-smBItJasDAaQpDjOGw9ES/LX7f72ncT6BTgVPer8L+BUPeoiDr7aodXlicdpQfEx
-4/Xa2SnxcvpldBT2u+8x
-=ATKo
+iF4EAREIAAYFAlL/394ACgkQXYk9GL8g3FE27QEAl2K5Xk121POyp6Eqko+tjxat
+btk3zCtmGr7uO3cZP/EA/ic7qi1SFWqHrrv+INfLwePvks4ceAADhJtLBXkN7jF/
+=VHWp
 -----END PGP SIGNATURE-----
