@@ -2,13 +2,14 @@
 Hash: SHA256
 
 EBUILD gnome-light-2.32.1-r2.ebuild 2651 SHA256 60a3f708146b1055923966636c47c2db05e597e15f33732367fb993ece7a7133 SHA512 008acfacbc8a4e4682a4cfd7429b3b449a5335e90297abb8a5f5d23b31429dd9560d92eb2fa3d29a6080379b707f0207c3e3385b338911c6dde727d787f42ef3 WHIRLPOOL 2841ca88226dccb66215888ce0d5851680918f1fec090da065db6f717480644fb6c0f6b355eab77057aa675d4835a9815a4e138c7e014592fb1d27ee82274a57
+EBUILD gnome-light-3.10.0.ebuild 1604 SHA256 4317af3947e978885bafa5959e769b21fc6c81335d7ee460aff37ec3081e8433 SHA512 1481f87bcf99aeab946eda4fbc1e67723a0d0ca55f05c4f23a8020af73d3e0a83b983e81e9228d64254f5715619c2f32d9ed52a2d368592aa3739249e39d0a73 WHIRLPOOL bc83706e831cf12248cdce35f13989cfef19e2804a08e1dd9745ebff85f6de66735e06e9f3d6f495751933c32c665eea2760920ace88f732c3cd5189ae6b0ad7
 EBUILD gnome-light-3.8.0.ebuild 1748 SHA256 0e65c2b8e5787d46ba97a093b03e2939e406c2ab4f86f434b7482ad338d26148 SHA512 f7d83eb99e72c3d5492b3ca5a93bb9274d610b3102a174c29820e7ad0980b55a930af0ed278cf1a41cf8df0af82ee72e7f9ca27a5d35c598ab19127ca904b252 WHIRLPOOL ba87a6d7645f6c5b5f7e313ad1436d2e6cf17099929a3723b0b70439516a1a268db4894a3e0ddc516db4af7f175dc707f752c8f22228ddee7fbc4ce68b8f4ea7
-MISC ChangeLog 22990 SHA256 b96f9d651c1529ef5134537cbec9d20749232e4f8dfd1b35c065d3e59494810e SHA512 f2559a769ea5329cef3932f094aba77b02731501879f868f3b6a168bdbed6c82e0533a1267bcbcfcb62f78fc464323fd996430d349003c8c741f080c62a76297 WHIRLPOOL 993d6c113adbee358718798f40fe6fdcb2d25628fed4f7389fd9f448f8578eec4735495cbd2f03fa4bc443dfac1ea22137de768245feb7a7eaf026354a6860a6
+MISC ChangeLog 23115 SHA256 0af9a3260bbb904018af6e82745b12c987b8d98a088c84ba6139cf5d602bb9de SHA512 4fd157d8cbdf7f531a3d2177e63aaa7c958e631866b1c054468014579c588accf75a22c1a0271af19e3c09fa492ab0852535a2cc1abdbd524593cce9467748f6 WHIRLPOOL 0ca19c1b480020e06d6209246f3c771819c844c528af58c674ffe675752439721404a910d143c01927244c2de3fd450896796d7477d08a76d4afb9745b0895e5
 MISC metadata.xml 423 SHA256 bf89dbc2920323de237190f96bb180b532f16a35c786ec654c787f166ac29efb SHA512 8e42c2bf00f7e0a271d347c405f35d2dbb0c6b4f710f77589f5230ab075d8843f2475af514e7765ce5cc0bd563aad31ad9359c339728b13d6180c7d049b66b39 WHIRLPOOL 4b947360cd772ede604fd2781b40f1b5fe0a3597dfacaad7d16d73082aff65991d5d4342b5e65a10d2f1bca2e9d31442734ebc4e2406e110bb4d5a234c24df7a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLcLKQACgkQCaWpQKGI+9QdrACfcnLxbA7cWux2+L/LOBxyJ1pb
-JfwAoIJaTtl/1HsP91HAMvB6bdFH3z/M
-=+ier
+iEYEAREIAAYFAlL/4IAACgkQCaWpQKGI+9SoXgCfY/EnyybZAiM9jhKbbwval1HL
+CCMAn119MwskOIRhGDqUJuxkiK40ZG2+
+=sUPG
 -----END PGP SIGNATURE-----
