@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=gmp? ( dev-libs/gmp ) userland_GNU? ( >=sys-apps/coreutils-8.5 )
+DESCRIPTION=Low-level cryptographic library
+EAPI=5
+HOMEPAGE=http://www.lysator.liu.se/~nisse/nettle/
+IUSE=doc +gmp neon static-libs test abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris
+LICENSE=|| ( LGPL-3 LGPL-2.1 )
+RDEPEND=gmp? ( dev-libs/gmp ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-baselibs-20131008-r9 !app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] )
+SLOT=0/4
+SRC_URI=http://www.lysator.liu.se/~nisse/archive/nettle-2.7.1.tar.gz
+_eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	autotools-multilib	5beadd9860130ff93bfad7eb91d499e9	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	40081e8c7e7f7c4f9db349a1d6d52925	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multilib-build	198e1c7095dbce1ca2848aed0f96bf60	multilib-minimal	a481090a413ba6970bd9643494ef982f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=315e36772d83ab86b8eba6a1acebe35b
