@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gnome-light
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.172 2014/01/19 19:50:59 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.173 2014/02/15 21:47:43 pacho Exp $
+
+*gnome-light-3.10.0 (15 Feb 2014)
+
+  15 Feb 2014; Pacho Ramos <pacho@gentoo.org> +gnome-light-3.10.0.ebuild:
+  Version bump
 
   19 Jan 2014; Pacho Ramos <pacho@gentoo.org> -gnome-light-3.6.2.ebuild,
   gnome-light-3.8.0.ebuild, metadata.xml:
