@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/nettle
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nettle/ChangeLog,v 1.102 2013/08/06 13:07:05 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nettle/ChangeLog,v 1.103 2014/02/15 21:44:55 alonbl Exp $
+
+*nettle-2.7.1-r1 (15 Feb 2014)
+
+  15 Feb 2014; Alon Bar-Lev <alonbl@gentoo.org> +nettle-2.7.1-r1.ebuild:
+  Add multilib support, bug#493974, thanks to Michael Mair-Keimberger (iamnr3)
+  and austinenglish
 
   06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> nettle-2.7.1.ebuild:
   Stable for s390, wrt bug #477612
